# python-etl-lib

./: .buildinfo  .env.sample  .gitignore  CHANGELOG.md  Makefile  Pipfile  README.asciidoc  README.md  batching.html  cli.html  configuration.html  dashboard.json  data-sinks.html  data-sources.html  genindex.html  index.html  noxfile.py  objects.inv  parallel.html  processing.html  py-modindex.html  pyproject.toml  pytest.ini  reporting.html  search.html  searchindex.js  testing.html  validation.html
_modules/: index.html
_sources/: batching.rst.txt  cli.rst.txt  configuration.rst.txt  data-sinks.rst.txt  data-sources.rst.txt  index.rst.txt  parallel.rst.txt  reporting.rst.txt
docs/: Makefile  README.md  batching.rst  cli.rst  conf.py  configuration.rst  data-sinks.rst  data-sources.rst  index.rst  processing.rst  reporting.rst  testing.rst  validation.rst
examples/nyc-taxi/: .env.sample  README.md  pyproject.toml
examples/nyc-taxi/data/: sample_yellow_tripdata.csv
examples/nyc-taxi/src/: main.py
examples/nyc-taxi/src/model/: trip.py
examples/nyc-taxi/src/tasks/: LoadTripsParallelTask.py  LoadTripsSequentialTask.py  SchemaTask.py
source/: etl_lib.cli.html  etl_lib.cli.run_tools.html  etl_lib.core.BatchProcessor.html  etl_lib.core.ClosedLoopBatchProcessor.html  etl_lib.core.ETLContext.html  etl_lib.core.InstrumentationWriter.html  etl_lib.core.ParallelBatchProcessor.html  etl_lib.core.ProgressReporter.html  etl_lib.core.SplittingBatchProcessor.html  etl_lib.core.Task.html  etl_lib.core.ValidationBatchProcessor.html  etl_lib.core.html  etl_lib.core.utils.html  etl_lib.data_sink.CSVBatchSink.html  etl_lib.data_sink.CypherBatchSink.html  etl_lib.data_sink.SQLBatchSink.html  etl_lib.data_sink.html  etl_lib.data_source.html  (+18 more)
(+176 files in other folders)
