[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "etl-lib"
authors = [{ name = "Bert Radke", email = "bert.radke@pm.me" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Development Status :: 4 - Beta"
]
dynamic = ["version", "description"]
keywords = ["etl", "graph"]

dependencies = [
    "pydantic>=2.10.5; python_version >= '3.8'",
    "neo4j>=5.27.0; python_version >= '3.7'",
    "python-dotenv>=1.0.1; python_version >= '3.8'",
    "tabulate>=0.9.0; python_version >= '3.7'",
    "click>=8.1.8; python_version >= '3.7'"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4; python_version >= '3.8'",
    "testcontainers[neo4j]==4.9.0; python_version >= '3.9' and python_version < '4.0'",
    "pytest-cov",
]
gds = ["graphdatascience>=1.13; python_version >= '3.9'"]
build =["flit>=3.10.1; python_version >= '3.8'"]

[project.urls]
Home = "https://github.com/neo-technology-field/python-etl-lib"

